--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>integrity-hub</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <link rel="stylesheet" href="/style.min.css" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
